fix: youtube iframe videos mobile not responsive

--- a/website/src/css/custom.scss
+++ b/website/src/css/custom.scss
@@ -111,3 +111,7 @@ html[data-theme='dark'] {
 .opacity-0 {
   opacity: 0;
 }
+
+.markdown iframe {
+  width: 100%;
+}
